# type-uuid

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: derive.rs  std_types.rs
src/: amethyst_types.rs  lib.rs  lib.rs.orig
tests/: derive.rs
type-uuid-derive/: Cargo.toml
type-uuid-derive/src/: lib.rs
type-uuid-derive/tests/: derive.rs
