[package]
name = "type-uuid"
version = "0.1.1"
authors = ["David LeGare <dlegare.1001@gmail.com>", "Jacob Kiesel <kieseljake@gmail.com>"]
edition = "2018"

description = "Safe, stable IDs for Rust types"
readme = "./README.md"
documentation = "https://docs.rs/type-uuid"
repository = "https://github.com/randomPoison/type-uuid"
license = "Apache-2.0 OR MIT"
categories = ["rust-patterns"]

[dependencies]
type-uuid-derive = { version = "0.1.1", path = "./type-uuid-derive" }
amethyst = { version = "0.10.0", optional = true }

[dev-dependencies]
uuid = "0.7.1"

[workspace]
