[package]
name = "type-uuid"
version = "0.1.2"
authors = ["David LeGare <dlegare.1001@gmail.com>", "Jacob Kiesel <kieseljake@gmail.com>"]
edition = "2018"

description = "Safe, stable IDs for Rust types"
readme = "./README.md"
documentation = "https://docs.rs/type-uuid"
repository = "https://github.com/randomPoison/type-uuid"
license = "Apache-2.0 OR MIT"
categories = ["rust-patterns"]

[dependencies]
amethyst = { version = "0.10.0", optional = true }
type-uuid-derive = { version = "0.1.2", path = "./type-uuid-derive" }
const-sha1 = "0.2.0"

[dev-dependencies]
uuid = { version = "0.8", default-features = false }

[workspace]
