[package]
name = "type-uuid-derive"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"
description = "Custom derive for the type-uuid crate"
documentation = "https://docs.rs/type-uuid"
repository = "https://github.com/randomPoison/type-uuid"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.24"
syn = "0.15.23"
quote = "0.6.10"
uuid = "0.7.1"
